[refactor] Simplify code in FileTypeUtils, HdfsReader, MyOrcReader, and MyParquetReader by using modern Java features and improving readability